--- a/template with websoket/exam/pubspec.yaml
+++ b/template with websoket/exam/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   awesome_dialog: ^0.1.0
   logger: ^0.8.3
   web_socket_channel: ^1.1.0
+  shared_preferences: ^0.5.6
 
 dev_dependencies:
   flutter_test:
